Add Issues graph

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,13 +18,18 @@
             <div class="three columns"><div id="status" class="badge healthy">healthy</div></div>
           </div>
         </section>
-        
+
         <section>
           <h2>Growth Indicators</h2>
           <div class="row trends">
             <div class="four columns" id="commits-over-time"></div>
             <div class="four columns" id="stargazers-over-time"></div>
             <div class="four columns" id="forks-over-time"></div>
+          </div>
+          <h2>Growth Indicators</h2>
+          <div class="row trends">
+            <div class="four columns" id="issues-over-time"></div>
+            <div class="four columns" id="pulls-over-time"></div>
           </div>
         </section>
 
