--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,7 @@
 <!-- SPDX-License-Identifier: MIT -->
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,6 +13,23 @@
     <script src="scripts/metricsgraphics.min.js"></script>
   </head>
   <body>
+
+    <div class="row" style="margin-top:30px">
+      <div class="col-md-6 col-md-offset-3">
+      <form name="input">
+        <div class="form-group">
+          <label for="owner">Owner</label>
+          <input type="text" class="form-control" id="owner">
+        </div>
+        <div class="form-group">
+          <label for="repo">Repository</label>
+          <input type="text" class="form-control" id="repo">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+      </div>
+    </div>
+
     <div class="container">
       <div class="row report">
         <section>
@@ -26,7 +46,7 @@
             <div class="four columns" id="stargazers-over-time"></div>
             <div class="four columns" id="forks-over-time"></div>
           </div>
-          <h2>Growth Indicators</h2>
+          <!-- <h2>Growth Indicators</h2> -->
           <div class="row trends">
             <div class="four columns" id="issues-over-time"></div>
             <div class="four columns" id="pulls-over-time"></div>
