--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,14 +16,14 @@
 
     <div class="row" style="margin-top:30px">
       <div class="col-md-6 col-md-offset-3">
-      <form name="input">
+      <form name="input" method="GET">
         <div class="form-group">
           <label for="owner">Owner</label>
-          <input type="text" class="form-control" id="owner">
+          <input type="text" class="form-control" name="owner" id="owner">
         </div>
         <div class="form-group">
           <label for="repo">Repository</label>
-          <input type="text" class="form-control" id="repo">
+          <input type="text" class="form-control" name="repo" id="repo">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
         </form>
@@ -34,8 +34,8 @@
       <div class="row report">
         <section>
           <div class="row">
-            <div class="nine columns"><h1 id="repo"> facebook / folly </h1></div>
-            <div class="three columns"><div id="status" class="badge healthy">healthy</div></div>
+            <div class="nine columns"><h1 id="repo-label"> facebook / folly </h1></div>
+            <div class="three columns"><div id="status" class="btn btn-success">healthy</div></div>
           </div>
         </section>
 
@@ -52,10 +52,16 @@
             <div class="four columns" id="pulls-over-time"></div>
           </div>
         </section>
-
-      </div>
-      </div> <!-- end of report -->
+        </div> <!-- end of report -->
       </div> <!-- end of container -->
       <script src="scripts/health-report.js"></script>
+      <script>
+        function redirect(){
+          alert("owner");
+          // var q1 = document.getElementById('owner').value;
+          // var q2 = document.getElementById('repo').value
+          // window.location = "http://www.google.com";
+        }
+      </script>
     </body>
   </html>
