--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
 
+    <!-- basic form to get the owner and repo. GET causes auto formating into the URL on submit -->
     <div class="row">
       <form name="input" method="GET" style="background:#ddd; padding:30px">
         <div class="form-group">
