Fix title change, clarification in instructions

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,7 @@
           <input type="text" class="form-control" name="repo" id="repo">
         </div>
         <button type="submit" class="" style="background:white">Submit</button>
+        <br><small>Currently only repositories in the <a href="http://ghtorrent.org/msr14.html">MSR14 dataset</a> are supported. The projects on that site are listed as &lt;repo&gt;/&lt;owner&gt;<br>(for instance, devtoos/hadley would is the project devtools by the owner hadley)</small>
         </form>
     </div>
 
