Add comparison capability

--- a/frontend/app/assets/index.html
+++ b/frontend/app/assets/index.html
@@ -13,7 +13,7 @@
   <script src="js/app.js"></script>
   <script>
   index = require('index')
-  index.start();
+  index.start()
   </script>
 </body>
 </html>
