--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,18 +2,62 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Posts</title>
-  <link rel="stylesheet" href="app.css">
+  <meta name="viewport" content="width=device-width">
+  <title>Brunch</title>
+  <link rel="stylesheet" href="/app.css">
+  <script src="/vendor.js"></script>
+  <script src="/app.js"></script>
+  <script>require('ui');</script>
 </head>
 <body>
-  <githubform></githubform>
-  <healthreport></healthreport>
-  <script src="js/vendor.js"></script>
-  <script src="js/app.js"></script>
-  <script>
-  index = require('index')
-  index.start()
-  </script>
+
+  <header class="hide-print">
+    <div class="content">
+      <div class="row">
+        <div class="col col-5">
+          <img src="img/logo.png" alt="CHAOSS: Community Health Analytics for Open Source Software"/>
+        </div>
+        <div class="col col-6 push-right">
+          <div class="form-item">
+              <input type="text" class="search reposearch" id="main-repo-search" placeholder="GitHub URL">
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <div id="cards" class="content">
+    <section id="landing" class="unmaterialized">
+      <h1>Enter a GitHub URL to get started</h1>
+      <input type="text" class="search reposearch" placeholder="GitHub URL"/>
+    </section>
+  </div>
+
+  <div id="base-template" class="hidden"/>
+    <div class="row">
+      <div class="col col-6">
+        <div class="linechart" data-source="commits"></div>
+      </div>
+      <div class="col col-6">
+        <div class="linechart" data-source="forks"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col col-6">
+        <div class="linechart" data-source="pulls" data-title="Pull Requests"></div>
+      </div>
+      <div class="col col-6">
+        <div class="linechart" data-source="issues"></div>
+      </div>
+    </div>
+  </div>
+
+  <div id="comparison-form-template"/>
+    <div class="form-item">
+      <label>Compare to a Repository</label>
+      <input type="text" class="search" name="search" placeholder="GitHub URL">
+    </div>
+  </div>
+
 </body>
 </html>
