--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -50,6 +50,14 @@
         <div class="linechart" data-source="issues"></div>
       </div>
     </div>
+    <div class="row">
+      <div class="col col-6">
+        <div class="linechart" data-source="stars" data-title="Stargazers"></div>
+      </div>
+      <div class="col col-6">
+        <div class="linechart" data-source="tags"></div>
+      </div>
+    </div>
   </div>
 
   <div id="comparison-form-template"/>
