--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -50,14 +50,7 @@
         <div class="linechart" data-source="issues"></div>
       </div>
     </div>
-    <div class="row">
-      <div class="col col-6">
-        <div class="linechart" data-source="stars" data-title="Stargazers"></div>
-      </div>
-      <div class="col col-6">
-        <div class="linechart" data-source="tags"></div>
-      </div>
-    </div>
+        <div class="linechart" data-source="uniqueCommitters"></div>
   </div>
 
   <div id="comparison-form-template"/>
