--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -36,7 +36,7 @@
   <div id="base-template" class="hidden"/>
     <div class="row">
       <div class="col col-6">
-        <div class="linechart" data-source="commits" data-title="Commits / Week"></div>
+        <div class="linechart" data-source="commits" data-rolling data-title="Commits / Week"></div>
       </div>
       <div class="col col-6">
         <div class="linechart" data-source="forks" data-title="Forks / Week"></div>
