--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class="row">
       <div class="col col-6">
-        <div class="linechart" data-source="stars" data-title="Stars / Week"></div>
+        <div class="linechart" data-source="stars" data-rolling data-title="Stars / Week"></div>
       </div>
       <div class="col col-6">
         <div class="linechart" data-source="uniqueCommitters" data-title="Unique Committers"></div>
