--- a/frontend/app/assets/index.html
+++ b/frontend/app/assets/index.html
@@ -58,6 +58,24 @@
         <div class="linechart" data-source="uniqueCommitters" data-title="Unique Committers"></div>
       </div>
     </div>
+    <small>Data provided by <a href="http://ghtorrent.org/msr14.html">GHTorrent</a> and the <a href="https://developer.github.com/">GitHub API</a></small>
+  </div>
+
+  <div id="ecosystem-template" class="hidden">
+    <div class="row">
+      <div class="col col-12"><div class="linechart" data-source="downloads" data-title="Total Downloads"></div></div>
+    </div>
+    <div class="row">
+      <div class="col col-6">
+        <h3>Top Dependents</h3>
+        <div class="deps" id="dependents"></div>
+      </div>
+        <div class="col col-6">
+        <h3>Top Dependencies</h3>
+        <div class="deps" id="dependencies"></div>
+      </div>
+    </div>
+    <small>Data provided by <a href="https://libraries.io/">libraries.io</a></small>
   </div>
 
   <div id="comparison-form-template"/>
