--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -63,7 +63,7 @@
 
   <div id="ecosystem-template" class="hidden">
     <div class="row">
-      <div class="col col-12"><div class="linechart" data-source="downloads" data-title="Total Downloads"></div></div>
+      <div class="col col-12"><div class="linechart" data-source="downloads" data-title="Downloads / Day"></div></div>
     </div>
     <div class="row">
       <div class="col col-6">
