--- a/frontend/app/assets/index.html
+++ b/frontend/app/assets/index.html
@@ -37,36 +37,43 @@
 
     <div class="row">
       <div class="col col-12">
-        <div class="linechart" data-source="commits" data-rolling data-title="Commits / Week"></div>
+        <div class="linechart" data-source="commits" data-rolling data-title="Commits / Week">
+        <cite class="metric">Metric: <a href="https://wiki.linuxfoundation.org/oss-health-metrics/metrics/community-activity" target="_blank">Community Activty</a></cite>
+        </div>
       </div>
     </div>
 
     <div class="row">
       <div class="col col-12">
-        <div class="linechart" data-source="forks" data-rolling data-title="Forks / Week"></div>
+        <div class="linechart" data-source="forks" data-rolling data-title="Forks / Week"><cite class="metric">Metrics: <a href="https://wiki.linuxfoundation.org/oss-health-metrics/metrics/community-activity" target="_blank">Community Activty</a>, <a href="https://wiki.linuxfoundation.org/oss-health-metrics/metrics/forks">Forks</a></cite></div>
       </div>
     </div>
 
     <div class="row">
       <div class="col col-12">
-        <div class="linechart" data-source="issues" data-rolling data-title="Issues / Week"></div>
+        <div class="linechart" data-source="issues" data-rolling data-title="Issues / Week"><cite class="metric">Metric: <a href="https://wiki.linuxfoundation.org/oss-health-metrics/metrics/community-activity" target="_blank">Community Activty</a></cite></div>
       </div>
     </div>
 
     <div class="row">
       <div class="col col-6">
-        <div class="linechart" data-source="pulls" data-title="Pull Requests / Week"></div>
+        <div class="linechart" data-source="pulls" data-title="Pull Requests / Week"><cite class="metric">Metric: <a href="https://wiki.linuxfoundation.org/oss-health-metrics/metrics/community-activity" target="_blank">Community Activty</a></cite></div>
       </div>
       <div class="col col-6">
-        <div class="linechart" data-source="uniqueCommitters" data-title="Unique Committers"></div>
+        <div class="linechart" data-source="uniqueCommitters" data-title="Unique Committers">
+          <cite class="metric">Metric: <a href="https://wiki.linuxfoundation.org/oss-health-metrics/metrics/contributors">Contributors</a>
+        </div>
       </div>
     </div>
+
     <small>Data provided by <a href="http://ghtorrent.org/msr14.html">GHTorrent</a> and the <a href="https://developer.github.com/">GitHub API</a></small>
   </div>
 
   <div id="ecosystem-template" class="hidden">
     <div class="row">
-      <div class="col col-12"><div class="linechart" data-source="downloads" data-title="Downloads / Day"></div></div>
+      <div class="col col-12"><div class="linechart" data-source="downloads" data-title="Downloads / Day">
+        <cite class="metric">Metric: <a href="https://wiki.linuxfoundation.org/oss-health-metrics/metrics" target="_blank">Downloads</a></cite>
+      </div></div>
     </div>
     <div class="row">
       <div class="col col-12">
