--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -56,8 +56,8 @@
         <h4>Comparisons</h4>
 
         <div class="form-item form-checkboxes">
-            <label class="checkbox"><input name="comparebaseline" checked type="radio"> Baseline is project</label>
-            <label class="checkbox"><input name="comparebaseline" type="radio"> Baseline is 0%</label>
+            <label class="checkbox"><input name="comparebaseline" checked type="radio"> Baseline is 0%</label>
+            <label class="checkbox"><input name="comparebaseline" type="radio"> Baseline is project</label>
         </div>
 
         <button class="button w100" id="renderbutton">Render</button>
