Add baseline comparisons

--- a/frontend/app/assets/index.html
+++ b/frontend/app/assets/index.html
@@ -56,8 +56,8 @@
         <h4>Comparisons</h4>
 
         <div class="form-item form-checkboxes">
-            <label class="checkbox"><input name="comparebaseline" checked type="radio"> Baseline is 0%</label>
-            <label class="checkbox"><input name="comparebaseline" type="radio"> Baseline is project</label>
+            <label class="checkbox"><input name="comparebaseline" value="each" checked type="radio">100% is average of each</label>
+            <label class="checkbox"><input name="comparebaseline" value="compared" type="radio">100% is the compared project</label>
         </div>
 
         <button class="button w100" id="renderbutton">Render</button>
