--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -56,7 +56,7 @@
         <h4>Comparisons</h4>
 
         <div class="form-item form-checkboxes">
-            <label class="checkbox"><input name="comparebaseline" value="each" checked type="radio">100% is average of each</label>
+            <label class="checkbox"><input name="comparebaseline" value="each" checked type="radio">Z-score trailing average</label>
             <label class="checkbox"><input name="comparebaseline" value="compared" type="radio">100% is the compared project</label>
         </div>
 
