--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -90,10 +90,12 @@
     </div>
 
     <div class="row">
-      <div class="col col-6">
-        <div class="linechart" data-source="pulls" data-title="Pull Requests / Week"><cite class="metric">Metric: <a href="https://wiki.linuxfoundation.org/oss-health-metrics/metrics/community-activity" target="_blank">Community Activty</a></cite></div>
+      <div class="col col-12">
+        <div class="linechart" data-source="pullsAcceptanceRate" data-rolling data-title="Pull Requests Created to Closed Ratio / Week"><cite class="metric">Metric: <a href="https://wiki.linuxfoundation.org/oss-health-metrics/metrics/community-activity" target="_blank">Community Activty</a></cite></div>
       </div>
-      <div class="col col-6">
+    </div>
+    <div class="row">
+      <div class="col col-12">
         <div class="linechart" data-source="uniqueCommitters" data-title="Unique Committers">
           <cite class="metric">Metric: <a href="https://wiki.linuxfoundation.org/oss-health-metrics/metrics/contributors">Contributors</a>
         </div>
@@ -116,11 +118,25 @@
     </div>
     <div class="row">
       <div class="col col-6">
-        <h3>Top Dependents</h3>
+        <div class="row">
+          <div class="col col-12">
+            <h3 class="desc">Repositories that depend on <span class="baseproject"></span></h3>
+            <div class="large total-dependents">N/A</div>
+            <br>
+          </div>
+        </div>
+        <h3 class="desc">Top projects that depend on <span class="baseproject"></span></h3>
         <div class="deps" id="dependents"></div>
       </div>
         <div class="col col-6">
-        <h3>Top Dependencies</h3>
+        <div class="row">
+          <div class="col col-12">
+            <h3 class="desc">Libraries that <span class="baseproject"></span> depends on</h3>
+            <div class="large total-dependencies">N/A</div>
+            <br>
+          </div>
+        </div>
+        <h3 class="desc">Top repositories that <span class="baseproject"></span> depends on</h3>
         <div class="deps" id="dependencies"></div>
       </div>
     </div>
