Fix title, add public folder for easier deployment

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -125,7 +125,7 @@
             <br>
           </div>
         </div>
-        <h3 class="desc">Top projects that depend on <span class="baseproject"></span></h3>
+        <h3 class="desc">Top libraries that depend on <span class="baseproject"></span></h3>
         <div class="deps" id="dependents"></div>
       </div>
         <div class="col col-6">
