--- a/frontend/app/assets/index.html
+++ b/frontend/app/assets/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Brunch</title>
+  <title>GHData - Open Source Health Metrics</title>
   <link rel="stylesheet" href="/app.css">
   <script src="/vendor.js"></script>
   <script src="/app.js"></script>
@@ -97,7 +97,7 @@
     <div class="row">
       <div class="col col-12">
         <div class="linechart" data-source="uniqueCommitters" data-title="Unique Committers">
-          <cite class="metric">Metric: <a href="https://wiki.linuxfoundation.org/oss-health-metrics/metrics/contributors">Contributors</a>
+          <cite class="metric">Metric: <a href="https://wiki.linuxfoundation.org/oss-health-metrics/metrics/contributors">Contributors</a></cite>
         </div>
       </div>
     </div>
@@ -125,7 +125,7 @@
             <br>
           </div>
         </div>
-        <h3 class="desc">Top projects that depend on <span class="baseproject"></span></h3>
+        <h3 class="desc">Top libraries that depend on <span class="baseproject"></span></h3>
         <div class="deps" id="dependents"></div>
       </div>
         <div class="col col-6">
