Add loading indicator

--- a/frontend/app/assets/index.html
+++ b/frontend/app/assets/index.html
@@ -102,7 +102,7 @@
       </div>
     </div>
 
-    <small>Data provided by <a href="http://ghtorrent.org/msr14.html">GHTorrent</a> and the <a href="https://developer.github.com/">GitHub API</a></small>
+    <small>Data provided by <a href="http://ghtorrent.org/msr14.html">GHTorrent</a> <span class="ghtorrent-version"></span> and the <a href="https://developer.github.com/">GitHub API</a></small>
   </div>
 
   <div id="ecosystem-template" class="hidden">
@@ -121,23 +121,23 @@
         <div class="row">
           <div class="col col-12">
             <h3 class="desc">Repositories that depend on <span class="baseproject"></span></h3>
-            <div class="large total-dependents">N/A</div>
+            <div class="large total-dependents">Loading...</div>
             <br>
           </div>
         </div>
         <h3 class="desc">Top libraries that depend on <span class="baseproject"></span></h3>
-        <div class="deps" id="dependents"></div>
+        <div class="deps" id="dependents">Loading...</div>
       </div>
         <div class="col col-6">
         <div class="row">
           <div class="col col-12">
             <h3 class="desc">Libraries that <span class="baseproject"></span> depends on</h3>
-            <div class="large total-dependencies">N/A</div>
+            <div class="large total-dependencies">Loading..</div>
             <br>
           </div>
         </div>
         <h3 class="desc">Top repositories that <span class="baseproject"></span> depends on</h3>
-        <div class="deps" id="dependencies"></div>
+        <div class="deps" id="dependencies">Loading...</div>
       </div>
     </div>
     <small>Data provided by <a href="https://libraries.io/">libraries.io</a></small>
