--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,9 +3,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>GHData</title>
-  <link rel="stylesheet" href="/app.css">
-  <script src="/vendor.js"></script>
-  <script src="/app.js"></script>
+  <link rel="stylesheet" href="static/app.css">
+  <script src="static/vendor.js"></script>
+  <script src="static/app.js"></script>
 </head>
 <body>
   <div id="app">
