--- a/frontend/app/assets/index.html
+++ b/frontend/app/assets/index.html
@@ -4,7 +4,11 @@
   <meta name="viewport" content="width=device-width">
   <title>GHData</title>
   <link rel="stylesheet" href="static/app.css">
+
   <script src="static/vendor.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.12.2/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/metrics-graphics/2.12.0/metricsgraphics.js"></script>
+  
   <script src="static/app.js"></script>
 </head>
 <body>
@@ -15,3 +19,4 @@
     require('GHData.js').default()
   </script>
 </body>
+
