Add more validation and maybe fix Docker

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,10 +17,10 @@
       <augur-app></augur-app>
     </div>
     <script>
-      
-      %% session_script %%
-
       require('Augur.js').default()
+    </script>
+    <script>
+      %% session_script %%
     </script>
   </body>
 </html>
