Add description to webpage installation view
This commit adds a small instruction to bottom of the installation
page that gets loaded in the browser. This instruction tells users
to return to the terminal after submitting their credentials, which
will hopefully make the flow of the process clearer for first time
or inexperienced users.

Signed-off-by: Carter Landis <ccarterlandis@gmail.com>

--- a/util/scripts/install/index.html
+++ b/util/scripts/install/index.html
@@ -21,6 +21,8 @@
   <input type="text" name="key"><br>
   <input type="submit" value="Submit" onclick="saveConfigValues()">
  </form> 
+
+ <p>After you've entereted the corresponding values for each item, please return to the terminal to finish the installation.</p>
 </center> 
 
 </body></html>
