Rename poorly named DB config variable
Signed-off-by: Carter Landis <ccarterlandis@gmail.com>

--- a/util/scripts/install/webserver/index.html
+++ b/util/scripts/install/webserver/index.html
@@ -14,7 +14,7 @@
   Port:<br>
   <input type="text" name="port"><br>
   User:<br>
-  <input type="text" name="user"><br>
+  <input type="text" name="db_user"><br>
   Password:<br>
   <input type="text" name="password"><br>
   GitHub API Key:<br>
